--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>fincheck-app</title>
     <link href="/src/index.css" rel="stylesheet">
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="h-full bg-gray-0">
+    <div class="h-full" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
