--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fincheck-app</title>
-    <link href="/src/index.css" rel="stylesheet">
-  </head>
-  <body class="h-full bg-gray-0">
-    <div class="h-full" id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>fincheck-app</title>
+  <link href="/src/index.css" rel="stylesheet">
+</head>
+
+<body class="h-full bg-gray-0">
+  <div class="h-screen" id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
